Fix small screen size layout issues

--- a/styles.css
+++ b/styles.css
@@ -456,6 +456,11 @@ header #brand img {
   font-weight: 300;
   font-family: Open Sans, Helvetica Neue, Helvetica, Arial, sans-serif;
 }
+@media screen and (max-width: 550px) {
+  #home-page header #brand a {
+    font-size: 2.5rem;
+  }
+}
 #home-page header #brand img {
   height: 4rem;
   margin-bottom: 0.9rem;
@@ -599,6 +604,7 @@ footer {
   margin-right: 0;
   clear: none;
   display: flex;
+  justify-content: space-between;
 }
 footer a {
   text-decoration: none;
